# MVC-Architecture-SFML

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Controller/: Controlador.cpp  Controlador.h  Controller.cpp  Controller.h
Model/: Model.cpp  Model.h  Modelo.cpp  Modelo.h
View/: View.cpp  View.h  Vista.cpp  Vista.h
include/Core/: Game.hpp  ResourceManager.hpp
include/Engine/Assets/: AssetManager.hpp
include/Engine/Audio/: AudioManager.hpp
include/Engine/Core/: Application.hpp
include/Engine/Event/: EventBus.hpp
include/Engine/Graphics/: Renderer.hpp
include/Engine/Input/: InputManager.hpp
include/Engine/Scene/: Scene.hpp  SceneManager.hpp
include/Example/: DemoScene.hpp  DemoState.hpp
include/Example/Animation/: SpriteAnimator.hpp
include/Example/Camera/: Camera.hpp
include/Example/Entities/: Entity.hpp
include/Example/Physics/: Collision.hpp
include/Example/UI/: HUD.hpp
include/Game/Animation/: SpriteAnimator.hpp
include/Game/Camera/: Camera.hpp
include/Game/Controller/: Controller.h
include/Game/Entities/: Entity.hpp
include/Game/Model/: Model.h
include/Game/Physics/: Collision.hpp
include/Game/Scenes/: MenuScene.hpp  PauseScene.hpp
include/Game/UI/: HUD.hpp
include/Game/View/: IView.hpp  View.h
include/States/: GameState.hpp  State.hpp  StateMachine.hpp
src/: main.cpp
src/Core/: Game.cpp
src/Engine/Audio/: AudioManager.cpp
src/Engine/Core/: Application.cpp
src/Engine/Graphics/: Renderer.cpp
src/Engine/Input/: InputManager.cpp
src/Engine/Scene/: SceneManager.cpp
src/Example/: DemoScene.cpp  DemoState.cpp
src/Example/Animation/: SpriteAnimator.cpp
src/Example/Camera/: Camera.cpp
src/Example/Entities/: Entity.cpp
src/Example/Physics/: Collision.cpp
src/Example/Scenes/: MenuScene.cpp  PauseScene.cpp
src/Example/UI/: HUD.cpp
src/Game/Animation/: SpriteAnimator.cpp
src/Game/Camera/: Camera.cpp
src/Game/Controller/: Controller.cpp
src/Game/Entities/: Entity.cpp
src/Game/Model/: Model.cpp
src/Game/Physics/: Collision.cpp
src/Game/Scenes/: MenuScene.cpp  PauseScene.cpp
src/Game/UI/: HUD.cpp
src/Game/View/: View.cpp
src/States/: GameState.cpp  StateMachine.cpp
